--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -8,10 +8,18 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="spec/SpecHelper.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="src/namespaces.js"></script>
+  <script type="text/javascript" src="src/genius/Color.js"></script>
+  <script type="text/javascript" src="src/genius/Stage.js"></script>
+  <script type="text/javascript" src="src/genius/Game.js"></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/genius/StageSpec.js"></script>
+  <script type="text/javascript" src="spec/genius/GameSpec.js"></script>
+  <script type="text/javascript" src="spec/integration/riseToLevel2AndMissSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
