--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
           function newDiv(color, board) {
             var div = document.createElement("div")
+            div.style.backgroundColor = "white";
             div.style.opacity = "0.5";
             div.style.width = "100px";
             div.style.height = "100px";
