player have to hit colors in order that appeared before

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   </head>
   <body>
     <script type="text/javascript" src="src/namespaces.js"></script>
+    <script type="text/javascript" src="src/genius/HappyArray.js"></script>
     <script type="text/javascript" src="src/genius/Color.js"></script>
     <script type="text/javascript" src="src/genius/Stage.js"></script>
     <script type="text/javascript" src="src/genius/Game.js"></script>
+
     <script>
       (function(Genius) {
         function Button(color, board) {
