--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/namespaces.js"></script>
+  <script type="text/javascript" src="src/genius/HappyArray.js"></script>
   <script type="text/javascript" src="src/genius/Color.js"></script>
   <script type="text/javascript" src="src/genius/Stage.js"></script>
   <script type="text/javascript" src="src/genius/Game.js"></script>
